--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,13 @@
 <html>
   <head>
   	<title>Sinatra + Twitter Bootstrap</title>
+    <script src="/lib/underscore-1.4.3.js"></script>
     <script src="/lib/jquery-1.7.2.min.js" type="text/javascript"></script>
+    <script src="/lib/backbone-0.9.2.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/app/app.js"></script>
+    
+
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
   </head>
   <body style="padding-top: 50px;">
