building out collection and collection view

--- a/views/appLayout.erb
+++ b/views/appLayout.erb
@@ -2,7 +2,8 @@
 
 <div id="app">
 	<script id="incidentTemplate" type="text/template">
-	<p>description:  {{ description }}</p>
+	<h2>Incident</h2>
+	<p>Description:  {{ description }}</p>
 
 	<p>Feelings:</p>
   <ul>
@@ -30,8 +31,13 @@
 
   </ul>
 
-	
 
+	</script>
+
+
+
+	<script id="newIncident">
+		// form for adding a new incident
 	</script>
 
 </div>
