--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,8 +8,8 @@
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/app/app.js"></script>
     
-
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/app/app.css">
   </head>
   <body style="padding-top: 50px;">
 
