fixed the create route to show form and edited main nav for easier access

--- a/views/appLayout.erb
+++ b/views/appLayout.erb
@@ -2,8 +2,15 @@
 <div id="notices"></div>
 <div id="app">
 
-  <form id="addIncident" action="">
-    <input type="text" placeholder="new incident...">
+  <form id="addIncident" action="" style="display:none">
+    <input type="text" placeholder="description">
+<!--     <input type="text" placeholder="feeling">
+    <input type="text" placeholder="intensityBefore">
+    <input type="text" placeholder="intensityAfter">
+    <input type="text" placeholder="thought">
+    <input type="text" placeholder="distortions">
+    <input type="text" placeholder="rationalThought"> -->
+    <!-- SUBMIT -->
     <input type="submit" value="addIncident">
   </form>  
 	
@@ -45,6 +52,10 @@
       </div> <!-- //end incidentInfo -->
 	</script>
 
+
+<div id="testRoute">
+
+</div>
 
 
 
