--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,9 @@
 
             <ul class="nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/secure/place">Secret</a></li>
+              <li><a href="/cbt">App</a></li>
+              <li><a href="/cbt#create">Create new</a></li>
+
             </ul>
 
             <ul class="nav pull-right">
