starting to build out the create incident submit method

--- a/views/appLayout.erb
+++ b/views/appLayout.erb
@@ -2,7 +2,7 @@
 <div id="notices"></div>
 <div id="app">
 
-  <form id="addIncident" action="" style="display:none">
+  <form id="createIncident" name="description" action="" style="display:none">
     <input type="text" placeholder="description">
 <!--     <input type="text" placeholder="feeling">
     <input type="text" placeholder="intensityBefore">
