not sure what happened there.  but the submit event is now bound to the submit button in createIncident form

--- a/views/appLayout.erb
+++ b/views/appLayout.erb
@@ -1,18 +1,6 @@
 <p>My Awesome App</p>
 <div id="notices"></div>
-<div id="app">
-
-  <form id="createIncident" name="description" action="" style="display:none">
-    <input type="text" placeholder="description">
-<!--     <input type="text" placeholder="feeling">
-    <input type="text" placeholder="intensityBefore">
-    <input type="text" placeholder="intensityAfter">
-    <input type="text" placeholder="thought">
-    <input type="text" placeholder="distortions">
-    <input type="text" placeholder="rationalThought"> -->
-    <!-- SUBMIT -->
-    <input type="submit" value="addIncident">
-  </form>  
+<div id="app"> 
 	
 	<script id="showIncidentTemplate" type="text/template">
   
@@ -52,13 +40,10 @@
       </div> <!-- //end incidentInfo -->
 	</script>
 
-
-<div id="testRoute">
-
-</div>
-
-
-
+  <form id="createIncident" name="description" action="" style="">
+    <input type="text" placeholder="description">
+    <input id="submitCreate" type="submit" value="createIncident">
+  </form> 
 
 </div>
 
